--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -325,7 +325,16 @@
         "You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes":"You agree to be contacted by telephone and electronically to process this application. You agree to the use of email communication for marketing purposes",
         "No card required":"No card required",
         "Customer care":"Customer care",
-        "New task":"New task"
+        "New task":"New task",
+        "Location Registration":"Location Registration",
+        "Task Planning":"Task Planning",
+        "Task Execution":"Task Execution",
+        "Settlement report":"Settlement report",
+        "Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.":"Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.",
+        "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.":"Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.",
+        "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.":"Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.",
+        "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors."
+
  
         
 
