changed header name

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -297,7 +297,6 @@
       "hours":"hours",
       "Total amount of time for closed positions":"Total amount of time for closed positions",
       "Get started today!":"Get started today!",
-      "Effectively manage tasks and location":"Effectively manage tasks and location",
       "Save":"Save",
       "Edit":"Edit",
       "Inactive":"Inactive",
@@ -333,7 +332,8 @@
         "Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.":"Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.",
         "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.":"Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.",
         "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.":"Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.",
-        "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors."
+        "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.",
+        "Time and place of work registration system":"Time and place of work registration system"
 
  
         
