--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -298,7 +298,6 @@
     "hours": "години",
     "Total amount of time for closed positions": "Загальна тривалість закритих позицій",
     "Get started today!": "Почніть сьогодні!",
-    "Effectively manage tasks and location": "Ефективно керуйте завданнями та місцем",
     "Save":"Зберегти",
     "Edit":"Редагувати",
         "Inactive": "Неактивний",
@@ -334,6 +333,8 @@
             "Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.": "Реєструйте місця роботи ваших співробітників. Це дозволить вам відстежувати прогрес завдань і спростить розрахунки. Співробітники також будуть точно знати, куди їм іти.",
             "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.": "Враховуйте наявність вашої команди та плануйте завдання відповідно. Це забезпечить спокій вам і вашим колегам. Використовуйте календар TaskVenue для перегляду завдань і запланованих відсутностей персоналу.",
             "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.": "Співробітники будуть отримувати повідомлення про завдання безпосередньо на свої мобільні пристрої. Підтвердження виконання завдань разом з місцем і часом виконання допоможе вам залишатися в курсі прогресу.",
-            "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Система дозволяє безпечно керувати даними, які завжди доступні. Ви легко можете створювати зведення та звіти як для співробітників, так і для підрядників."
+            "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Система дозволяє безпечно керувати даними, які завжди доступні. Ви легко можете створювати зведення та звіти як для співробітників, так і для підрядників.",
+            "Time and place of work registration system":"Система реєстрації часу та місця роботи"
+            
           
 }  
