--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -297,7 +297,6 @@
       "hours":"godziny",
       "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji",
       "Get started today!":"Rozpocznij",
-      "Effectively manage tasks and location":"Efektywnie zarządzaj zadaniami i lokalizacją",
       "Save":"Zapisz",
       "Edit":"Edytuj",
       "Inactive":"Nieaktywni",
@@ -333,7 +332,8 @@
             "Record the places where your employees work. This will allow you to track the progress of tasks and make settlements easier. Employees will also know exactly where to go.": " Zapisz miejsca, gdzie pracują Twoi pracownicy. To pozwoli Ci śledzić postęp zadań i łatwiej się rozliczać. Pracownicy też będą wiedzieć, gdzie mają się udać.",
             "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.": "Weź pod uwagę dostępność zespołu i zaplanuj zadania. To zapewni spokój Tobie i Twoim współpracownikom. Użyj kalendarza TaskVenue, by widzieć zadania i planowane nieobecności w zespole.",
             "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.": "Pracownicy otrzymają powiadomienia o zadaniach bezpośrednio na swoje urządzenia mobilne. Potwierdzenie wykonania zadania, lokalizacji i czasu wykonania pomoże Ci być na bieżąco z postępami.",
-            "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "System umożliwia bezpieczne zarządzanie danymi, które są zawsze dostępne. Możesz łatwo tworzyć zestawienia i raporty, zarówno dla pracowników, jak i kontrahentów."
+            "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "System umożliwia bezpieczne zarządzanie danymi, które są zawsze dostępne. Możesz łatwo tworzyć zestawienia i raporty, zarówno dla pracowników, jak i kontrahentów.",
+            "Time and place of work registration system":"System  rejestracji czasu i miejsca pracy"
 
           
 
