added information about user

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -333,7 +333,8 @@
             "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.": "Weź pod uwagę dostępność zespołu i zaplanuj zadania. To zapewni spokój Tobie i Twoim współpracownikom. Użyj kalendarza TaskVenue, by widzieć zadania i planowane nieobecności w zespole.",
             "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.": "Pracownicy otrzymają powiadomienia o zadaniach bezpośrednio na swoje urządzenia mobilne. Potwierdzenie wykonania zadania, lokalizacji i czasu wykonania pomoże Ci być na bieżąco z postępami.",
             "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "System umożliwia bezpieczne zarządzanie danymi, które są zawsze dostępne. Możesz łatwo tworzyć zestawienia i raporty, zarówno dla pracowników, jak i kontrahentów.",
-            "Time and place of work registration system":"System  rejestracji czasu i miejsca pracy"
+            "Time and place of work registration system":"System  rejestracji czasu i miejsca pracy",
+            "User information":"Użytkownik"
 
           
 
