--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -313,7 +313,8 @@
         "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.": "Berücksichtigen Sie die Verfügbarkeit Ihres Teams und planen Sie Aufgaben entsprechend. Dies wird Ihnen und Ihren Kollegen Ruhe geben. Nutzen Sie den TaskVenue-Kalender, um Aufgaben und geplante Abwesenheiten des Personals zu sehen.",
         "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.": "Mitarbeiter erhalten Benachrichtigungen über Aufgaben direkt auf ihren mobilen Geräten. Die Bestätigung der Aufgabenerfüllung zusammen mit dem Ort und der benötigten Zeit hilft Ihnen, über den Fortschritt auf dem Laufenden zu bleiben.",
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Das System ermöglicht ein sicheres Datenmanagement, das jederzeit zugänglich ist. Sie können leicht Zusammenfassungen und Berichte sowohl für Mitarbeiter als auch für Auftragnehmer erstellen.",
-        "Time and place of work registration system":"System zur Registrierung von Arbeitszeit und -ort"
+        "Time and place of work registration system":"System zur Registrierung von Arbeitszeit und -ort",
+        "User information": "Benutzer"
 
       
   
