--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -333,7 +333,8 @@
         "Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.":"Consider your team's availability and plan tasks accordingly. This will ensure peace of mind for you and your coworkers. Use the TaskVenue calendar to see tasks and scheduled staff absences.",
         "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.":"Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.",
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.",
-        "Time and place of work registration system":"Time and place of work registration system"
+        "Time and place of work registration system":"Time and place of work registration system",
+        "User information":"User information"
 
  
         
