Confirmation of time

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -314,7 +314,8 @@
         "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.": "Mitarbeiter erhalten Benachrichtigungen über Aufgaben direkt auf ihren mobilen Geräten. Die Bestätigung der Aufgabenerfüllung zusammen mit dem Ort und der benötigten Zeit hilft Ihnen, über den Fortschritt auf dem Laufenden zu bleiben.",
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Das System ermöglicht ein sicheres Datenmanagement, das jederzeit zugänglich ist. Sie können leicht Zusammenfassungen und Berichte sowohl für Mitarbeiter als auch für Auftragnehmer erstellen.",
         "Time and place of work registration system":"System zur Registrierung von Arbeitszeit und -ort",
-        "User information": "Benutzer"
+        "User information": "Benutzer",
+        "Confirmation of time":"Zeitbestätigung"
 
       
   
