--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -334,7 +334,8 @@
         "Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.":"Employees will receive notifications about tasks directly on their mobile devices. Confirming the completion of tasks, along with the location and time taken, will help you stay updated with the progress.",
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.",
         "Time and place of work registration system":"Time and place of work registration system",
-        "User information":"User information"
+        "User information":"User information",
+        "Confirmation of time":"Confirmation of time"
 
  
         
