added comment to check valid of UserID

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -315,7 +315,8 @@
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Das System ermöglicht ein sicheres Datenmanagement, das jederzeit zugänglich ist. Sie können leicht Zusammenfassungen und Berichte sowohl für Mitarbeiter als auch für Auftragnehmer erstellen.",
         "Time and place of work registration system":"System zur Registrierung von Arbeitszeit und -ort",
         "User information": "Benutzer",
-        "Confirmation of time":"Zeitbestätigung"
+        "Confirmation of time":"Zeitbestätigung",
+        "Check the correctness and length of the User ID":"Überprüfen Sie die Richtigkeit und Länge der User ID"
 
       
   
