--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -335,7 +335,8 @@
         "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.":"The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.",
         "Time and place of work registration system":"Time and place of work registration system",
         "User information":"User information",
-        "Confirmation of time":"Confirmation of time"
+        "Confirmation of time":"Confirmation of time",
+        "Check the correctness and length of the User ID":"Check the correctness and length of the User ID"
 
  
         
