--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -336,7 +336,8 @@
             "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "Система дозволяє безпечно керувати даними, які завжди доступні. Ви легко можете створювати зведення та звіти як для співробітників, так і для підрядників.",
             "Time and place of work registration system":"Система реєстрації часу та місця роботи",
             "User information": "Користувач",
-            "Confirmation of time":"підтвердження часу"
+            "Confirmation of time":"підтвердження часу",
+            "Check the correctness and length of the User ID":"Перевірте правильність та довжину User ID"
             
           
 }  
