--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -335,7 +335,8 @@
             "The system allows for secure data management that is accessible at all times. You can easily create summaries and reports, for both employees and contractors.": "System umożliwia bezpieczne zarządzanie danymi, które są zawsze dostępne. Możesz łatwo tworzyć zestawienia i raporty, zarówno dla pracowników, jak i kontrahentów.",
             "Time and place of work registration system":"System  rejestracji czasu i miejsca pracy",
             "User information":"Użytkownik",
-            "Confirmation of time":"Potwierdzenie czasu"
+            "Confirmation of time":"Potwierdzenie czasu",
+            "Check the correctness and length of the User ID":"Sprawdź poprawność i długość User ID"
 
           
 
