--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -336,7 +336,19 @@
         "Time and place of work registration system":"Time and place of work registration system",
         "User information":"User information",
         "Confirmation of time":"Confirmation of time",
-        "Check the correctness and length of the User ID":"Check the correctness and length of the User ID"
+        "Check the correctness and length of the User ID":"Check the correctness and length of the User ID",
+        "Field work management (FSM) systems enable the organisation and monitoring of offsite tasks, which is key to the effective management of mobile teams.": "Field work management (FSM) systems enable the organisation and monitoring of offsite tasks, which is key to the effective management of mobile teams.",
+        "TaskVenue is an FSM system that facilitates the management of mobile teams, providing tools for effective planning, monitoring and analysis of fieldwork": "TaskVenue is an FSM system that facilitates the management of mobile teams, providing tools for effective planning, monitoring and analysis of fieldwork",
+        "Benefits": "Benefits",
+        "Applications": "Applications",
+        "Improvement of Efficiency and Productivity of Mobile Workers": "Improvement of Efficiency and Productivity of Mobile Workers",
+        "Increased Visibility and Control Over Field Work": "Increased Visibility and Control Over Field Work",
+        "Optimization of Routes and Schedules": "Optimization of Routes and Schedules",
+        "Improvement of Communication and Information Flow": "Improvement of Communication and Information Flow",
+        "Management of Tasks and Service Orders": "Management of Tasks and Service Orders",
+        "Monitoring of Work Progress and Worker Localization": "Monitoring of Work Progress and Worker Localization",
+        "Management of Schedules and Worker Availability": "Management of Schedules and Worker Availability",
+        "Data Collection and Reporting from the Field": "Data Collection and Reporting from the Field"
 
  
         
