--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -126,7 +126,7 @@
     "Start date":"Data rozpoczęcia",
     "End date":"Data zakończenia",
     "Add new user":"Dodaj nowego użytkownika",
-    "Manager":"Kierownik",
+    "Manager":"Administrator",
     "Client":"Klient",
     "Worker":"Pracownik",
     "Approved":"Zatwierdzony",
@@ -220,7 +220,7 @@
       "Agenda": "Agenda",
       "There are no events in this range.": "Brak wydarzeń w tym zakresie.",
       "More": "Więcej",
-      "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"System usprawniający zarządzanie oraz komunikację między kierownictwem, klientem, a osobami wykonującymi pracę w terenie.",
+      "That is, a system that improves management and communication between management, the customer, and those doing the work in the field.":"System usprawniający zarządzanie oraz komunikację między zarządem, klientem, a osobami wykonującymi pracę w terenie.",
       "Order a consultation":"Zamów bezpłatną konsultację",
       "Give your name for easy identification":"Przedstaw się w celu ułatwienia identyfikacji",
       "After adding your account to the configuration, log in again":"Po dodaniu twojego konta do konfiguracji zaloguj się jeszcze raz",
