changed short translation sign in and sign up

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -1,7 +1,7 @@
 {
 	"language": "język",
-    "sign in": "zaloguj się",
-    "sign up": "zarejestruj się",
+    "sign in": "logowanie",
+    "sign up": "rejestracja",
     "sign in via magic link": "magic link", 
     "send magic link": "wyślij magic link",
     "enter your email": "wprowadź email",
